--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,67 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+      <cucumber-version>2.4.0</cucumber-version>
+      <guice-version>4.2.0</guice-version>
+      <maven-surefire-version>2.20.1</maven-surefire-version>
+      <selenium-version>3.10.0</selenium-version>
+      <testng-version>6.14.2</testng-version>
+      <webdrivermanager-version>2.1.0</webdrivermanager-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-java</artifactId>
+          <version>${cucumber-version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-guice</artifactId>
+          <version>${cucumber-version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-testng</artifactId>
+          <version>${cucumber-version}</version>
+      </dependency>
+
+
+      <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>${guice-version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-java</artifactId>
+          <version>${selenium-version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>${testng-version}</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>${webdrivermanager-version}</version>
+      </dependency>
+
+
+      <dependency>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-version}</version>
+      </dependency>
+
   </dependencies>
 </project>
