--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,21 @@
 
   <properties>
       <cucumber.version>2.4.0</cucumber.version>
-      <guice.version>4.2.0</guice.version>
+      <guice.version>4.0</guice.version>
       <maven-surefire.version>2.20.1</maven-surefire.version>
       <selenium.version>3.10.0</selenium.version>
       <slf4j.version>1.7.25</slf4j.version>
-      <testng.version>6.14.2</testng.version>
       <webdrivermanager.version>2.1.0</webdrivermanager.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-core</artifactId>
+          <version>${cucumber.version}</version>
+      </dependency>
 
       <dependency>
           <groupId>io.cucumber</groupId>
@@ -31,21 +36,14 @@
 
       <dependency>
           <groupId>io.cucumber</groupId>
-          <artifactId>cucumber-guice</artifactId>
+          <artifactId>cucumber-picocontainer</artifactId>
           <version>${cucumber.version}</version>
       </dependency>
-
+      
       <dependency>
           <groupId>io.cucumber</groupId>
           <artifactId>cucumber-testng</artifactId>
           <version>${cucumber.version}</version>
-      </dependency>
-
-
-      <dependency>
-          <groupId>com.google.inject</groupId>
-          <artifactId>guice</artifactId>
-          <version>${guice.version}</version>
       </dependency>
 
       <dependency>
@@ -64,15 +62,6 @@
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-log4j12</artifactId>
           <version>${slf4j.version}</version>
-          <scope>test</scope>
-      </dependency>
-
-
-      <dependency>
-          <groupId>org.testng</groupId>
-          <artifactId>testng</artifactId>
-          <version>${testng.version}</version>
-          <scope>test</scope>
       </dependency>
 
       <dependency>
